samples/_failures_safe/1761416158_e4993b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2554838a.c: In function ‘main’:
./samples/SAFE/__tmp_2554838a.c:153:12: error: missing terminating " character
  153 |     printf("-------\
      |            ^~~~~~~~~
./samples/SAFE/__tmp_2554838a.c:153:5: error: expected expression at end of input
  153 |     printf("-------\
      |     ^~~~~~
./samples/SAFE/__tmp_2554838a.c:153:5: error: expected declaration or statement at end of input
